--- a/server/package.json
+++ b/server/package.json
@@ -8,11 +8,12 @@
     "body-parser": "*",
     "mocha": "6.1.4",
     "chai" : "4.2.0",
-    "supertest":"4.0.2"
+    "supertest":"4.0.2",
+    "nyc": "14.1.1"
   },
   "scripts": {
     "dev": "nodemon",
     "start": "node index.js",
-    "test": "mocha --exit" 
+    "test": "nyc --report=text mocha --exit" 
   }
 }
