--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,6 @@
   "scripts": {
     "dev": "nodemon",
     "start": "node index.js",
-    "test": "nyc --report=text mocha --exit" 
+    "test": "mocha --exit" 
   }
 }
