--- a/client/nginx/default.conf
+++ b/client/nginx/default.conf
@@ -4,6 +4,6 @@ server {
     location / {
         root /usr/share/nginx/html;
         index inex.html index.htm;
-        try_files $uri $uri/ /index.html;
+        try_files $uri /index.html;
     }
 }
