--- a/server/package.json
+++ b/server/package.json
@@ -5,15 +5,10 @@
     "redis": "2.8.0",
     "cors": "2.8.4",
     "nodemon": "1.18.3",
-    "body-parser": "*",
-    "mocha": "6.1.4",
-    "chai" : "4.2.0",
-    "supertest":"4.0.2",
-    "nyc": "14.1.1"
+    "body-parser": "*"
   },
   "scripts": {
     "dev": "nodemon",
-    "start": "node index.js",
-    "test": "mocha --exit" 
+    "start": "node index.js"
   }
 }
